2004-05-10  Matti Aarnio  <mea@zmailer.org>

	* router/router.c, router/shliaise.c, proto/cf/standard.cf:
	    Change the router's log thingie to log with
	    spoolid, instead of message-id.

2004-05-09  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/smtptls.c:
	    Detect if there is known EOF coming up in read pipe.
	    This is meaningfull to check in case we are very early
	    in SMTP session, and somebody is feeding us spam...

	* smtpserver/policytest.c, smpserver/smtpauth.c:
	    Compiler said "uname might be used uninitialized"..
	    Actually it is not used in the policy code
	    either, but that is another story...

2004-05-08  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c, smtpserver/subdaemons.c:
	    For Solaris environemnts...  start the smtpserver's
	    subservers via execl(), actually does it for all
	    environments, but still...

	* include/shmmib.h, scheduler/scheduler.c,
	  transports/mailbox/mailbox.c, transports/smtp/smtp.c,
	  transports/expirer/expirer.c, transports/errormail/errormail.c,
	  transports/hold/hold.c, transports/sm/sm.c,
	  transports/reroute/reroute.c:
	    Changed SHMMIB area variables all to be of "volatile" kind.

	* smtpserver/smtpcmds.c, 
	    Changed report output a bit, don't give router output
	    directly to type() as a format string.

	* smtpserver/smtpserver.c:
	    Implement  zsleep()  by means of calling select(2).

	* smtpserver/subdaemon-rtr.c, smtpserver/subdaemons.c:
	    Reworked subprocess error (EOF) processing a bit.
	    Perhaps now dying router will automagically recover
	    loosing only the session currently underway.

2004-05-07  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/cfgread.c, smtpserver/subdaemons.c,
	  man/smtpserver.8.in, proto/smtpserver.conf.in:
	    Change the tarpit parameters to be of 'double'
	    type, instead of 'int'.  Allows slower growth