@@ -1,3 +1,15 @@
+2004-05-11  Matti Aarnio  <mea@zmailer.org>
+
+	* utils/vacation/vacation.c, man/vacation.1.in:
+	    Make the code to match the man page (-r option),
+	    then realized that -t option document matches
+	    current behaviour..   Anyway, 1.00 days is much
+	    better default interval.
+
+	* include/libz.h, lib/parseintv.c:
+	    Change the passed parameters to be of 'const' type.
+	    This code does not alter them.
+
 2004-05-10  Matti Aarnio  <mea@zmailer.org>
 
 	* router/router.c, router/shliaise.c, proto/cf/standard.cf:
